src/test/ui/mismatched_types/binops.stderr
error[E0277]: cannot add `Option<{integer}>` to `{integer}`
  --> $DIR/binops.rs:2:7
   |
LL |     1 + Some(1);
   |       ^ no implementation for `{integer} + Option<{integer}>`
   |
   = help: the trait `Add<Option<{integer}>>` is not implemented for `{integer}`

error[E0277]: cannot subtract `Option<{integer}>` from `usize`
  --> $DIR/binops.rs:3:16
   |
LL |     2 as usize - Some(1);
   |                ^ no implementation for `usize - Option<{integer}>`
   |
   = help: the trait `Sub<Option<{integer}>>` is not implemented for `usize`

error[E0277]: cannot multiply `{integer}` by `()`
  --> $DIR/binops.rs:4:7
   |
LL |     3 * ();
   |       ^ no implementation for `{integer} * ()`
   |
   = help: the trait `Mul<()>` is not implemented for `{integer}`

error[E0277]: cannot divide `{integer}` by `&str`
  --> $DIR/binops.rs:5:7
   |
LL |     4 / "";
   |       ^ no implementation for `{integer} / &str`
   |
   = help: the trait `Div<&str>` is not implemented for `{integer}`

error[E0277]: can't compare `{integer}` with `String`
  --> $DIR/binops.rs:6:7
   |
LL |     5 < String::new();
   |       ^ no implementation for `{integer} < String` and `{integer} > String`
   |
   = help: the trait `PartialOrd<String>` is not implemented for `{integer}`

error[E0277]: can't compare `{integer}` with `std::result::Result<{integer}, _>`
  --> $DIR/binops.rs:7:7
   |
LL |     6 == Ok(1);
   |       ^^ no implementation for `{integer} == std::result::Result<{integer}, _>`
   |
   = help: the trait `PartialEq<std::result::Result<{integer}, _>>` is not implemented for `{integer}`

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0277`.
